chore: add qdrant in compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,6 +124,15 @@ services:
     networks:
       - kafka-net
 
+  qdrant:
+    image: qdrant/qdrant
+    container_name: qdrant
+    ports:
+      - "6333:6333"
+      - "6334:6334"
+    networks:
+      - kafka-net
+
 networks:
   kafka-net:
     driver: bridge
